Seperate settings.mak out from the global makefile.
This also allows "make debug" to work again.

--- a/README
+++ b/README
@@ -3,12 +3,17 @@ SpaceConquest, das GPN 2011 Programmierspiel
 
 (dessen Namen irgendwie noch nicht festgelegt ist).
 
+Inhalt dieser Datei:
+
+1. Zugriff auf die Repositories
+2. Bauen des codes
+
 Beachten sie auch das Design-Brainstorming unter
 https://brotkasten.quaddamage.de/WeltraumProgrammierNacht
 
 
 ============================================
-Zugriff auf die Repositories:
+1. Zugriff auf die Repositories:
 ============================================
 
 Read-Only Zugriff auf dieses Repository:
@@ -31,3 +36,11 @@ Bitte id_rsa.pub an watz@nerd2nerd.org per email schicken.
 
 git clone ssh://git@code.nerd2nerd.org:42023/spaceconquest.git
 
+
+
+============================================
+Bauen des codes:
+============================================
+
+* settings.mak bearbeiten
+* "make" ausführen
